--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -10,7 +10,7 @@
 {% if zip_path %}
     <a href="download/?filepath={{ zip_path }}">Download your photos </a>
     <br />
-    <a href="http://www.finisherpix.com/photos/my-photos/currency/EUR/pctrl/Photos/paction/search/pevent/{{ race }}/pbib/{{ bib }}.html">Purchase photos</a>
+    <a href="http://www.finisherpix.com/gallery/photos/en/EUR/{{ race }}/{{ bib }}">Purchase photos</a>
     <br />
     <br />
     <a href="./">Start Again</a>
@@ -21,7 +21,7 @@
         finisherpix.com do, this is just a simple way to get the low resolution images for
         preview before purchase of the high resolution ones.</p>
     <form method="get" action="./">
-    <p>Race Tag: <input type="text" name="race" value="dublin-marathon-2016"/> </p>
+    <p>Race Tag <i>(2506 is the Race Tag for Dublin City Marathon 2018)</i>: <input type="text" name="race" value="2506"/> </p>
     <p>Bib Number: <input type="text" name="bib" value=""/> </p>
         <p><input type="submit" value="Get Zip file of low resolution photos" /></p>
     </form>
