Fix text in main template

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<h1>If you like your photos please do purchase the high official resolution versions</h1>
+<h1>If you like your photos please do purchase the official high resolution versions</h1>
 {% if zip_path %}
     <a href="download/?filepath={{ zip_path }}">Download your photos </a>
     <br />
